--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ code {
     left: 500px;
   }
 }
-/* header */
+/* page header */
 .header-item:hover {
   border-bottom: 2px solid transparent !important;
   color: inherit !important;
@@ -36,13 +36,6 @@ code {
   border-bottom: 2px solid transparent !important;
   color: inherit !important;
 }
-/* menu-bar */
-.ant-menu-item.menu-bar-item.ant-menu-item-active:hover {
-  color: rgba(255, 255, 255, 1);
-  border-color: rgba(255, 255, 255, 1);
-}
-.ant-menu-item.menu-bar-item.ant-menu-item-selected {
-  color: rgba(255, 255, 255, 1);
-  border-color: rgba(255, 255, 255, 1);
-}
+/* home page */
+
 
