--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -7,7 +7,7 @@
 */
 @media (min-width: 1281px) {
 
-    .function-main-box {
+    .function-lun-main-box {
         display: grid;
         grid-gap: 10px;
         grid-template-columns: repeat(6, 1fr);
@@ -27,7 +27,7 @@
     ##Screen = B/w 768px to 1024px
 */
 @media (min-width: 768px) and (max-width: 1024px) {
-    .function-main-box {
+    .function-lun-main-box {
         display: grid;
         grid-gap: 10px;
         grid-template-columns: repeat(3, 1fr);
@@ -56,7 +56,7 @@
 */
 @media (min-width: 320px) and (max-width: 480px) {
 
-    .function-main-box {
+    .function-lun-main-box {
         display: grid;
         height: 130vw;
         overflow-y: scroll;
